# overlay-native

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  config.json  config_test.json  docker-compose.yml  flake.nix  gtk+-3.0.pc  style.css  todo.norg
.cargo/: config.toml
.github/workflows/: build.yml
benches/: emotes_benchmark.rs
docs/: ARCHITECTURE.md  DEBUGGING.md  INSTALLATION.md  LINUX_SPECS.md  WINDOWS_SPECS.md
examples/: kick_example.rs
src/: config.rs  connection.rs  lib.rs  main.rs  twitch.rs  window.rs  windows.rs  x11.rs
src/emotes/: cache.rs  mod.rs  parser.rs  providers.rs  renderer.rs
src/mapping/: data_mapper.rs  message_transformer.rs  mod.rs  platform_adapter.rs
tests/: README.md  emotes_edge_cases.rs  emotes_integration.rs  kick_websocket_test.rs
