[package]
name = "overlay-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
twitch-irc = "5.0.1"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Windows-specific dependencies
[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "libloaderapi"] }

# Unix-specific dependencies (GTK)
[target."cfg(unix)".dependencies]
gtk = "0.17.1"
gdk = "0.17.1"
pango = "0.17.1"
glib = "0.17.8"
glib-macros = "0.17.8"
gdkx11 = { version = "0.17" }
x11rb = { version = "0.11.1", features = ["randr"] }

