[package]
name = "overlay-native"
version = "0.1.0"
edition = "2021"
default-run = "overlay-native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "overlay_native"
path = "src/lib.rs"

[[bin]]
name = "overlay-native"
path = "src/main.rs"

[[bin]]
name = "test_emotes"
path = "src/bin/test_emotes.rs"

[[example]]
name = "kick_example"
path = "examples/kick_example.rs"

[dependencies]

anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "sync", "fs"] }
twitch-irc = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
image = { version = "0.24", features = ["png", "gif", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0.61"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.4"
md5 = "0.7.0"
futures = "0.3.30"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.5.0"
serde_with = "3.4.0"
tempfile = "3.10.0"
kick-rust = "0.1.0"

[dev-dependencies]
mockall = "0.11.4"
criterion = "0.5.1"
proptest = "1.4.0"

# Windows-specific dependencies
[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "libloaderapi"] }

# Unix-specific dependencies (GTK)
[target."cfg(unix)".dependencies]
gtk = "0.17.1"
gdk = "0.17.1"
pango = "0.17.1"
glib = "0.17.8"
glib-macros = "0.17.8"
gdkx11 = { version = "0.17" }
x11rb = { version = "0.11.1", features = ["randr"] }
